--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,24 +46,45 @@ footer {
     padding: 0 10px;
 }
 
-    /* Media query: tablets and larger (768px and up) */
+/* Media query: large or landscape phones (576px and up) */
+
+@media screen and (min-width: 576px) { 
+
+}
+
+
+/* Media query: tablets and larger (768px and up) */
+
 @media screen and (min-width: 768px) {
-    /* Header */
-    nav {
-        display: block;
-        position: relative;
-        box-shadow: none;
-        width: fit-content;
-        padding-right: 1rem;
-    }
+    
+            /* Header */
+            nav {
+                display: block;
+                position: relative;
+                box-shadow: none;
+                width: fit-content;
+                padding-right: 1rem;
+            }
+    
+            #menu {
+                display: flex;
+            }
+    
+            #menu>li {
+                padding-left: 1rem;
+            }
+    
+    
+        }
 
-    #menu {
-        display: flex;
-    }
+/* Large devices (laptops and desktops, 992px and up) */
 
-    #menu > li {
-        padding-left: 1rem;
-    }
+@media screen and (min-width:992px) {
+
+}
+
+/* X-Large devices (1200px and up)*/
+@media screen and (min-width: 1200px) {
 
     
 }
