--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,25 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat Alternates", sans-serif;
     font-weight: 400;
     font-style: normal;
+    color: #401c04;
   }
 
 
+
+/* Header */
+header {
+    position: fixed;
+    padding: 0 10px;
+    z-index: 99;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+header a {
+    color: inherit;
+    text-decoration: none;
+}
 /* Navigation menu */
 
 nav {
@@ -19,6 +35,11 @@ nav {
     top: 100%;
 }
 
+nav a {
+    color: inherit;
+    text-decoration: none;
+}
+
 #menu {
     list-style-type: none;
     font-size: 110%;
@@ -26,7 +47,7 @@ nav {
 }
 
 .active {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid #401c04;
 }
 
   /* Footer */
@@ -86,5 +107,5 @@ footer {
 /* X-Large devices (1200px and up)*/
 @media screen and (min-width: 1200px) {
 
-    
+
 }
