--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    background-color: #de8e8a;
 }
 
 header a {
@@ -35,8 +36,8 @@ nav {
     position:absolute;
     background-color: #de8e8a;
     width: 100%;
-    right: 0;
-    padding: 0 1rem;
+    right: 2rem;
+    padding: 5px 1rem;
     display:none;
     top: 100%;
 }
@@ -44,6 +45,10 @@ nav {
 nav a {
     color: inherit;
     text-decoration: none;
+}
+
+#navigation-toggle {
+    display: none;
 }
 
 #menu {
@@ -100,7 +105,9 @@ footer {
             #menu>li {
                 padding-left: 1rem;
             }
-    
+            .navigation-label {
+                display: none;
+            }
     
         }
 
