--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Background colour for body of page*/
 
 body {
-    background-color: #F9F7EC;
+    background-color: #ffffff;
 }
 
 /* Header */
