--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,14 +17,23 @@ body {
 
 /* Header */
 header {
-    position: fixed;
+    position: relative;
     padding: 0 10px;
     z-index: 99;
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     background-color: #de8e8a;
     top: 0px;
+}
+
+header h1 {
+    font-family: "Montserrat Alternates", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 250px;
+  
 }
 
 header a {
@@ -34,7 +43,7 @@ header a {
 /* Navigation menu */
 
 nav {
-    position:absolute;
+    position:fixed;
     background-color: #de8e8a;
     width: 100%;
     right: 2rem;
@@ -73,7 +82,7 @@ nav a {
   /* Footer */
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     padding: 5px 0 20px 0;
     width: 100%;
