--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,27 @@ header a {
     color: inherit;
     text-decoration: none;
 }
+
+
+#other-pages-logo {
+    position: relative;
+    padding: 0 10px;
+    z-index: 99;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #de8e8a;
+    top: 0px;
+}
+
+#other-pages-logo   {
+    font-family: "Montserrat Alternates", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 100px;
+  
+}
 /* Navigation menu */
 
 nav {
