--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ nav {
     position:fixed;
     background-color: #de8e8a;
     width: 100%;
+    height: fit-content;
     right: 2rem;
     padding: 5px 1rem;
     display:none;
@@ -95,15 +96,15 @@ nav a {
 /* So Hum Website meaning styling */
 
 #definition {
-   position: absolute;
-   text-align: left;
-   margin-top: 70px;
-   padding: 5px 15px;
-   display: flex;
-   flex-direction: column;
-   
+    position: absolute;
+    text-transform: lowercase;
+    margin-top: 70px;
+    padding: 5px 10px;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    flex-direction: row;
 }
-
   /* Footer */
 
 footer {
