--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,9 +114,9 @@ nav a {
 /* Main background image */
 #background-image-main {
     width: 100%;
-    height: 100%;
+    height: 700px;
+    background: url(../assets/images/Main_background_image.jpg) no repeat center center/cover;
     position: relative;
-    display: flex;
 }
 
 #quote-home {
