--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,12 +115,14 @@ nav a {
 /* purpose of website image and text */
 
 #purpose-image{
-    width: 25%;
-    height: 350px;
-    position: relative;
+    width: 90vw;
+    height: 90vw;
+    /* image circular*/
     border-radius: 50%;
-    padding: 120px 150px 120px 150px;
-    float: right;
+    max-width: 300px;
+    max-height: 300px;
+    padding: 20px 20px;
+    float: center;
 }
 
 #purpose-text {
