--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ nav a {
     width: 90%;
     margin: 20px 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 #techniques-option {
