--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ nav a {
 
 #techniques {
     width: 90%;
-    margin: 20px 0;
+    margin-top: 120px;
     display: flex;
     justify-content: space-evenly;
 }
