--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,21 +152,37 @@ nav a {
 /* Techniques page */ 
 
 #getting-started {
-    text-wrap: wrap;
-    max-width: 75%;
-    min-height: 300px;
-    margin-top: 160px;
-    padding: 0 50px;
+    width: 90%;
+    margin-top: 120px;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    padding: 20px 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
+#getting-started-text {
+    text-align: left;
+    padding: 20px 0;
+}
 #getting-started-text > h4 {
     font-size: 150%;
     border-bottom: 1px solid #401c04;
     border-width: 20%;
     bottom: 0;
+}
+
+#getting-started-image {
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: relative;
+    width: 90vw;
+    height: 90vw;
+    /* Makes image circular*/
+    max-width: 300px;
+    max-height: 300px;
+    border-radius: 55%;
+    padding: 20px 0px;
 }
 
 #postures-link {
