--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,12 +111,29 @@ nav a {
 /* purpose of website image and text */
 
 #benefits {
-    width: 90%;
+    width: 100%;
     padding: 50px 0;
     margin: 20px 0;
     display: flex;
     justify-content: space-around;
     background-color: rgba(255, 255, 255, 0.8);
+    /*main image*/
+    background: url(../images/lotus-flower.jpg) no-repeat center center/cover;
+
+    /*specific height*/
+    min-height: 500px;
+
+    /* parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+
+#benefits-text {
+    background-color: rgba(255, 255, 255, 0.8);
+    
 }
 
 #benefits-image{
@@ -135,10 +152,7 @@ nav a {
     text-align: center;
 }
 
-#benefits-meditation {
-    margin-top: 20px;
-    line-height: 20px;
-}
+
 
 
 /* Techniques page */ 
