--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,12 +82,12 @@ nav a {
 
 /* Home Page */
 /* Main background image with parallax*/
-.main-photo-parallax {
+.welcome-photo-parallax {
     /*main image*/
     background: url(../images/Main_background_image.jpg) no-repeat center center/cover;
 
     /*specific height*/
-    min-height: 810px;
+    min-height: 800px;
 
     /* parallax scrolling effect */
     background-attachment: fixed;
@@ -100,10 +100,9 @@ nav a {
     background-color: rgba(255, 255, 255, 0.8);
     font-size: 130%;
     text-align: center;
-    color:#401c04;
     position: absolute;
-    bottom: 50%;
-    top: 50%;
+    bottom: 60%;
+    top: 40%;
     width: 100%;
     min-height: 100px;
     padding: 50px 50px;
