--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,6 @@ nav a {
 
 #quote-home {
     background-color: rgba(255, 255, 255, 0.8);
-    font-size: 130%;
     text-align: center;
     position: absolute;
     bottom: 60%;
@@ -106,6 +105,10 @@ nav a {
     width: 100%;
     min-height: 100px;
     padding: 50px 50px;
+}
+
+#quote-home > h4 {
+    font-size: 130%;
 }
 
 /* purpose of website image and text */
