--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     color: #401c04;
 }
 
-/* Header */
+/* Header all pages */
 header {
     position: fixed;
     padding: 0 20px;
@@ -40,7 +40,7 @@ header a {
 }
 
 
-/* Navigation menu */
+/* Navigation menu all pages */
 
 nav {
     position: fixed;
@@ -87,7 +87,8 @@ nav a {
 
 /* Home Page */
 
-/* Main background image with parallax*/
+/* PARALLAX*/
+
 .welcome-photo-parallax {
     /*main image*/
     background: url(../images/Main_background_image.jpg) no-repeat center center/cover;
@@ -102,30 +103,6 @@ nav a {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-#quote-home {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    position: absolute;
-    bottom: 60%;
-    top: 40%;
-    width: 100%;
-    min-height: 150px;
-    padding: 50px 0;
-}
-
-#quote-home > h4 {
-    font-size: 130%;
-}
-
-#quote-home > p {
-    font-size: 110%;
-    /*line-height: 15px;*/
-    text-wrap: wrap;
-    padding: 0 50px;
-}
-
-/* parallaxes*/
 
 .roots-parallax {
     /*main image*/
@@ -142,7 +119,6 @@ nav a {
     background-size: cover;
 
 }
-
 
 .benefits-parallax {
     /*main image*/
@@ -175,14 +151,29 @@ nav a {
     background-size: cover;
 }
 
-/*
-#benefits {
+/* HOME PAGE Content */
+
+#quote-home {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    position: absolute;
+    bottom: 60%;
+    top: 40%;
     width: 100%;
+    min-height: 150px;
     padding: 50px 0;
-    margin: 20px 0;
-    display: flex;
-    justify-content: space-around;
-}*/
+}
+
+#quote-home > h4 {
+    font-size: 130%;
+}
+
+#quote-home > p {
+    font-size: 110%;
+    /*line-height: 15px;*/
+    text-wrap: wrap;
+    padding: 0 50px;
+}
 
 #benefits-text, #roots-text, #journey-text {
     background-color: rgba(255, 255, 255, 0.8);
@@ -204,24 +195,13 @@ nav a {
 #roots > p, #journey-text > p {
     line-height: 25px;
 }
-/*
-#benefits-image{
-    width: 90vw;
-    height: 90vw;
-    position: relative;*/
-    /* image circular*/
-    /*border-radius: 50%;
-    max-width: 300px;
-    max-height: 300px;
-    padding: 20px 20px;
-}*/
 
 #benefits h3, #roots h3, #journey-text h3 {
     font-size: 200%;
     text-align: center;
 }
 
-/* Techniques page */ 
+/* TECHNIQUES PAGE */ 
 
 #getting-started {
     width: 90%;
@@ -296,7 +276,7 @@ nav a {
 }
 
 
-/* Footer */
+/* FOOTER ALL PAGES */
 
 footer {
     background-color: #de8e8a;
