Add sign up page content and form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,11 @@ nav a {
     padding: 10px 0px;
 }
 
+/*SIGN UP PAGE*/
+
+.sign-up-form {
+    margin-top: 140px;
+}
 
 /* FOOTER ALL PAGES */
 
