--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ nav a {
       
 }
 
-.journey-parallax {
+.journey-parallax, .sign-up-parallax  {
     /*main image*/
     background: url(../images/path.jpg) no-repeat center center/cover;
 
@@ -216,19 +216,23 @@ nav a {
 
 /* TECHNIQUES PAGE */ 
 
-.getting-started  {
-        /*main image*/
-        background: url(../images/getting-started.jpg) no-repeat center center/cover;
+main {
+    flex: 1 0 auto;
+}
 
-        /*specific height*/
-        min-height: 800px;
-        width: 100%;
-    
-        /* parallax scrolling effect */
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+.getting-started  {
+    /*main image*/
+    background: url(../images/getting-started.jpg) no-repeat center center/cover;
+
+    /*specific height*/
+    min-height: 800px;
+    width: 100%;
+
+    /* parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #getting-started-text {
@@ -288,10 +292,62 @@ nav a {
     padding: 10px 0px;
 }
 
+/* POSTURES */
+
 /*SIGN UP PAGE*/
 
-.sign-up-form {
-    margin-top: 140px;
+main {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+#sign-up {
+    color: #401c04;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 30px;
+    margin-top: 120px;
+}
+
+#sign-up-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-input {
+    background: #ffffff;
+    color: #401c04;
+    border: 1px solid #401c04;
+    border-radius: 2px;
+    width: 20%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    padding: 0 15px;    
+}
+
+.radio-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.radio-buttons h6 {
+    text-align: center;
+    font-size: 150%;
+}
+
+.join-button {
+    background-color: #401c04;
+    color: #ffffff;
+    border-radius: 25px;
+    font-size: 110%;
+    padding: 10px 20px;
+    margin-top: 30px;
+
 }
 
 /* FOOTER ALL PAGES */
