--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,6 +355,7 @@ main {
 .join-button:hover {
     background-color: rgba(255, 255, 255, 0.8);
     color: #401c04;
+    transition-duration: 0.3s;
 }
 
 /* FOOTER ALL PAGES */
