--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,6 +279,21 @@ main {
     background-size: cover;
 }
 
+.noting-parallax {
+       /*main image*/
+       background: url(../images/meditation-hands-sun.jpg) no-repeat center center/cover;
+
+       /*specific height*/
+       min-height: 500px;
+       width: 100%;
+   
+       /* parallax scrolling effect */
+       background-attachment: fixed;
+       background-position: center;
+       background-repeat: no-repeat;
+       background-size: cover;
+}
+
 .techniques {
     flex: 1 0 auto;
     display: flex; 
